[package]
name = "todo_lib"
version = "4.0.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["todotxt"]
license = "MIT"
description = "Collection of utilities for todo.txt format"
readme = "README.md"
repository = "https://github.com/VladimirMarkelov/todo_lib"

[dependencies]
regex = "1.0"
chrono = "^0.4"
failure="0.1.3"
serde = { version = "^1.0.136", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
